# RPIPicoXarm

./: .gitmodules  README.md
firmware/: CMakeLists.txt
firmware-ctr/: CMakeLists.txt
firmware-ctr/src/: CMakeLists.txt  main.cpp  xArmAgent.cpp  xArmAgent.h  xArmServosRad.h
firmware/port/FreeRTOS-Kernel/: FreeRTOSConfig.h  freertos_unit.cmake
firmware/simpleTest/: CMakeLists.txt  main.cpp  xArmServoController.h  xArmServosRad.h
firmware/src/: main.cpp  xArmAgent.cpp  xArmAgent.h  xArmServosRad.cpp  xArmServosRad.h
firmware2350/: CMakeLists.txt
firmware2350/port/FreeRTOS-Kernel/: FreeRTOSConfig.h  IdleMemory.c  cppMemory.cpp
firmware2350/src/: CMakeLists.txt  main.cpp  xArmAgent.h  xArmServoController.cpp  xArmServosRad.cpp
ros2_ws/src/xarm/: CMakeLists.txt  package.xml
ros2_ws/src/xarm/launch/: dispOnly.launch.py  display.launch.py
ros2_ws/src/xarm/meshes/: base.stl  base_collision.stl  link0.stl  link0_collision.stl  link0_left.stl  link0_left_collision.stl  link1.stl  link1_collision.stl  link1_left.stl  link1_left_collision.stl  link2.stl  link2_collision.stl  link3.stl  link3_collision.stl  link4.stl  link4_collision.stl  link5.stl  link5_collision.stl  link6.stl  link6_collision.stl
ros2_ws/src/xarm/urdf/: xarm_1s.urdf.xacro
